Fixed height for container on mobile

--- a/src/app/list-picture/list-picture.component.scss
+++ b/src/app/list-picture/list-picture.component.scss
@@ -3,21 +3,12 @@
   width: 100%;
 }
 
-// .image-div {
-//   display: flex;
-//   justify-content: center;
-//   height: 350px;
-//   padding: 25px 0;
-//   // img {
-//   //   max-width: 100%;
-//   //   max-height: 100%;
-//   // }
-// }
-
 mat-card {
   height: 350px;
-  margin: 25px 0;
+  min-width: 40vw;
+  margin: 25px auto;
   max-width: 400px;
+
 
   mat-card-content {
     height: 300px;
@@ -32,8 +23,4 @@ mat-card {
       height: auto;
     }
   }
-}
-
-mat-card {
-  width: auto;
 }
